--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="description" content="Soundgasm, Home of good music">
+  	<meta name="keywords" content="Soundgasm, Music, Music Charts">
+  	<meta name="author" content="Gideon Nwokpor">
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Soundgasm</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,13 +14,20 @@
 	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-	<nav class="topnav">
-		<ul class="main-nav">
-			<li><a href="">Soundgasm</a></li>
-			<li><a href="">Discover</a></li>
-			<li><a href="">Charts</a></li>
-			<li><a href="">Contact</a></li>
-		</ul>
-	</nav>
+	<header>
+		<nav class="topnav">
+			<ul class="main-nav">
+				<li><a href=""><img id="logo" src="soundlogo.svg">Soundgasm</a></li>
+				<div class="push">
+					<li><a href="">Discover</a></li>
+					<li><a href="">Charts</a></li>
+					<li><a href="">Contact</a></li>
+					<div class="nav-bar"><input type="text" placeholder="Search.."></div>
+					<li class="search"><a href=""><img id="icon" src="loupe.png"></a></li>
+				</div>
+			</ul>
+		</nav>
+	</header>
+	
 </body>
 </html>
