--- a/index.html
+++ b/index.html
@@ -15,17 +15,32 @@
 </head>
 <body>
 	<header>
-		<nav class="topnav">
-			<ul class="main-nav">
-				<li><a href=""><img id="logo" src="soundlogo.svg">Soundgasm</a></li>
-				<div class="push">
-					<li><a href="">Discover</a></li>
-					<li><a href="">Charts</a></li>
-					<li><a href="">Contact</a></li>
-					<div class="nav-bar"><input type="text" placeholder="Search.."></div>
-					<li class="search"><a href=""><img id="icon" src="loupe.png"></a></li>
+		<nav class="navbar navbar-expand-lg navbar-light topnav">
+			<div class="container-fluid">
+				<a href="">
+					<img id="logo" src="soundlogo.svg">Soundgasm
+				</a>
+
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	      			<span class="navbar-toggler-icon"></span>
+	    		</button>
+
+				<div class="collapse navbar-collapse push" id="navbarNav">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" href="">Discover</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="">Charts</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="">Contact</a>
+						</li>
+						<div class="nav-bar"><input type="text" placeholder="Search.."></div>
+						<li class="search"><a href=""><img id="icon" src="loupe.png"></a></li>
+					</ul>
 				</div>
-			</ul>
+			</div>
 		</nav>
 	</header>
 	
