--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-light topnav">
-			<div class="container-fluid">
+			<div class="container-fluid padding">
 				<a href="">
 					<img id="logo" src="soundlogo.svg">Soundgasm
 				</a>
@@ -25,8 +25,11 @@
 	      			<span class="navbar-toggler-icon"></span>
 	    		</button>
 
-				<div class="collapse navbar-collapse push" id="navbarNav">
-					<ul class="navbar-nav">
+				<div class="collapse navbar-collapse push" id="navbarSupportedContent">
+					<ul class="navbar-nav mb-2 mb-lg-0 push">
+						<li class="nav-item">
+				          <a class="nav-link active" aria-current="page" href="#">Home</a>
+				        </li>
 						<li class="nav-item">
 							<a class="nav-link" href="">Discover</a>
 						</li>
