--- a/index.html
+++ b/index.html
@@ -17,16 +17,14 @@
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-light topnav">
 			<div class="container-fluid padding">
-				<a href="">
-					<img id="logo" src="soundlogo.svg">Soundgasm
-				</a>
+				<div class="logo">
+					<a href="#">
+						<img id="logo" src="soundlogo.svg">Soundgasm
+					</a>
+				</div>
 
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-	      			<span class="navbar-toggler-icon"></span>
-	    		</button>
-
-				<div class="collapse navbar-collapse push" id="navbarSupportedContent">
-					<ul class="navbar-nav mb-2 mb-lg-0 push">
+				<div class=" push" id="navbarSupportedContent">
+					<ul class="navbar-nav mb-2 mb-lg-0">
 						<li class="nav-item">
 				          <a class="nav-link active" aria-current="page" href="#">Home</a>
 				        </li>
@@ -39,13 +37,27 @@
 						<li class="nav-item">
 							<a class="nav-link" href="">Contact</a>
 						</li>
-						<div class="nav-bar"><input type="text" placeholder="Search.."></div>
+						
+					</ul>
+				</div>
+				<div class="nav-bar"><input type="text" placeholder="Search..">
+					<ul>
 						<li class="search"><a href=""><img id="icon" src="loupe.png"></a></li>
 					</ul>
 				</div>
+					
 			</div>
 		</nav>
 	</header>
 	
+	<div id="main-content" class="containe">
+		<div class="jumbotron">
+			<img src="images/shape1.png" alt="shape" class="shape">
+			<img src="images/background.jpg" alt="background image" class="backimg">
+		</div>
+	</div>
+
+
+
 </body>
 </html>
