--- a/index.html
+++ b/index.html
@@ -1,62 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="description" content="Soundgasm, Home of good music">
-  	<meta name="keywords" content="Soundgasm, Music, Music Charts">
-  	<meta name="author" content="Gideon Nwokpor">
-  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Soundgasm</title>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Soundgasm</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;400;700&display=swap" rel="stylesheet">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<header>
-		<nav class="navbar navbar-expand-lg navbar-light topnav">
-			<div class="container-fluid padding">
-				<div class="logo">
-					<a href="#">
-						<img id="logo" src="soundlogo.svg">Soundgasm
-					</a>
-				</div>
+    <section class="header">
+        <nav>
+            <div class="logo">
+                <a href="index.html">
+                    <img src="images/soundlogo2.png" alt="logo" class="bb-logo">
+                    <img src="images/soundlogo1.png" alt="logo" class="b-logo">
+                    <span>Soundgasm</span>
+                </a>
+            </div>
+            <div class="nav-links">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Release</a></li>
+                    <li><a href="#">Charts</a></li>
+                    <li><a href="#">News</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
 
-				<div class=" push" id="navbarSupportedContent">
-					<ul class="navbar-nav mb-2 mb-lg-0">
-						<li class="nav-item">
-				          <a class="nav-link active" aria-current="page" href="#">Home</a>
-				        </li>
-						<li class="nav-item">
-							<a class="nav-link" href="">Discover</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="">Charts</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="">Contact</a>
-						</li>
-						
-					</ul>
-				</div>
-				<div class="nav-bar"><input type="text" placeholder="Search..">
-					<ul>
-						<li class="search"><a href=""><img id="icon" src="loupe.png"></a></li>
-					</ul>
-				</div>
-					
-			</div>
-		</nav>
-	</header>
-	
-	<div id="main-content" class="containe">
-		<div class="jumbotron">
-			<img src="images/shape1.png" alt="shape" class="shape">
-			<img src="images/background.jpg" alt="background image" class="backimg">
-		</div>
-	</div>
-
+        <div class="content">
+            <!-- <p>Find Warmth in</p> -->
+            <h1 class="slide-left">Find Warmth<br>in Good Music</h1>
+            <p class="slide-left">Listen to your favorite musicians today</p>
+            <div class="button slide-left">
+                <a href="">Sign Up</a>
+            </div>
+        </div>
+    </section>
 
 
 </body>
