8th Git commit for Soundgasm web page
Commit showing release page of the website.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,17 @@
         </div>
     </section>
 
+    <section class="releases">
+        <h1>New Music Out Today!</h1>
+        <p>Listen to latest hits and bangers from top artists around the world</p> 
+
+        <div class="row">
+            <div class="newMusic"><img src="images/Nmusic1.jpg" alt=""></div>
+            <div class="newMusic"><img src="images/Nmusic1.jpg" alt=""></div>
+            <div class="newMusic"><img src="images/Nmusic1.jpg" alt=""></div>
+        </div>
+    </section>
+
 
 <!---------Javascript for toogle menu-->
     <script>
