10th git commit for soundgasm web app
commit showing update to the new music today page and also showing the new "top charts page"

--- a/index.html
+++ b/index.html
@@ -46,17 +46,31 @@
     </section>
 
     <section class="releases">
-        <h1>New Music Out Today!</h1>
+        <h2>New Music Out Today!</h2>
         <p>Listen to latest hits and bangers from top artists around the world</p> 
 
         <div class="main-carousel">
-            <div class="carousel-cell"><img src="images/Adele1.jpg" alt=""><p class="newMusic"></p></div>
-            <div class="carousel-cell"><img src="images/Shawn1.jpg" alt=""><p class="newMusic"></p></div>
-            <div class="carousel-cell"><img src="images/Beyonce.jpg" alt=""><p class="newMusic"></p></div>
-            <div class="carousel-cell"><img src="images/Charlie P2.png" alt=""><p class="newMusic"></p></div>
-            <div class="carousel-cell"><img src="images/Christina1.jpg" alt=""><p class="newMusic"></p></div>
-            <div class="carousel-cell"><img src="images/Ed.jpg" alt=""><p class="newMusic"></p></div>
+            <div class="carousel-cell"><img src="images/Adele1.jpg" alt=""><div class="newMusic"><span>Rolling in the deep - Adele</span><img src="images/starr.png" alt="" class="star"></div></div>
+            <div class="carousel-cell"><img src="images/Shawn1.jpg" alt=""><div class="newMusic"><span>In My Blood - Shawn Mendez</span><img src="images/starr.png" alt="" class="star"></div></div>
+            <div class="carousel-cell"><img src="images/Beyonce.jpg" alt=""><div class="newMusic"><span>Best thing I never had - Beyonce</span><img src="images/starr1.png" alt="" class="star"></div></div>
+            <div class="carousel-cell"><img src="images/Charlie P2.png" alt=""><div class="newMusic"><span>One Call Away - Charlie Puth</span><img src="images/starr.png" alt="" class="star"></div></div>
+            <div class="carousel-cell"><img src="images/Christina1.jpg" alt=""><div class="newMusic"><span>A Thousand Years - Christina Aguilera</span><img src="images/starr.png" alt="" class="star"></div></div>
+            <div class="carousel-cell"><img src="images/Ed.jpg" alt=""><div class="newMusic"><span>Perfect - Ed sheeran</span><img src="images/starr.png" alt="" class="star"></div></div>
           </div>
+    </section>
+
+    <section class="charts">
+        <h3>Top Charts</h3>
+        <p>Top music of different genres</p>
+
+        <div class="top-songs">
+            <div class="gospel-hip">
+                <div class="gospel"><img src="images/Tmusic1.jpg" alt=""></div>
+                <div class="hip-hop"><img src="images/Nmusic5.jpg" alt=""></div>
+            </div>
+            <div class="rnb"><img src="images/Adele3.jpg" alt=""></div>
+            <div class="jazz"><img src="images/jazz.jpg" alt=""></div>
+        </div>
     </section>
 
 
