11th git commit for Soundgasm web app
commit showing update to the top charts page. page is responsive in small devices

--- a/index.html
+++ b/index.html
@@ -64,12 +64,10 @@
         <p>Top music of different genres</p>
 
         <div class="top-songs">
-            <div class="gospel-hip">
-                <div class="gospel"><img src="images/Tmusic1.jpg" alt=""></div>
-                <div class="hip-hop"><img src="images/Nmusic5.jpg" alt=""></div>
-            </div>
-            <div class="rnb"><img src="images/Adele3.jpg" alt=""></div>
-            <div class="jazz"><img src="images/jazz.jpg" alt=""></div>
+            <div class="gospel"><a href="" class="tc-hover"><img src="images/Tmusic1.jpg" alt="" class="img-gos"></a></div>
+            <div class="hip-hop"><a href="" class="tc-hover"><img src="images/Nmusic5.jpg" alt="" class="img-hip"></a></div>
+            <div class="rnb"><a href="" class="tc-hover"><img src="images/Adele3.jpg" alt="" class="img-rnb"></a></div>
+            <div class="jazz"><a href="" class="tc-hover"><img src="images/jazz.jpg" alt="" class="img-jazz"></a></div>
         </div>
     </section>
 
