New commit for soundgasm web app

--- a/index.html
+++ b/index.html
@@ -64,10 +64,38 @@
         <p>Top music of different genres</p>
 
         <div class="top-songs">
-            <div class="gospel"><a href="" class="tc-hover"><img src="images/Tmusic1.jpg" alt="" class="img-gos"></a></div>
-            <div class="hip-hop"><a href="" class="tc-hover"><img src="images/Nmusic5.jpg" alt="" class="img-hip"></a></div>
-            <div class="rnb"><a href="" class="tc-hover"><img src="images/Adele3.jpg" alt="" class="img-rnb"></a></div>
-            <div class="jazz"><a href="" class="tc-hover"><img src="images/jazz.jpg" alt="" class="img-jazz"></a></div>
+            <div class="gospel">
+                <a href="">
+                    <img src="images/Tmusic1.jpg" alt="" class="img-gos">
+                    <div class="tc-hover">
+                        <h3>GOSPEL</h3>
+                    </div>
+                </a>
+            </div>
+            <div class="hip-hop">
+                <a href="">
+                    <img src="images/Nmusic5.jpg" alt="" class="img-hip">
+                    <div class="tc-hover">
+                        <h3>HIP-HOP</h3>
+                    </div>
+                </a>
+            </div>
+            <div class="rnb">
+                <a href="">
+                    <img src="images/Adele3.jpg" alt="" class="img-rnb">
+                    <div class="tc-hover">
+                        <h3>RNB</h3>
+                    </div>
+                </a>
+            </div>
+            <div class="jazz">
+                <a href="">
+                    <img src="images/jazz.jpg" alt="" class="img-jazz">
+                    <div class="tc-hover">
+                        <h3>JAZZ</h3>
+                    </div>
+                </a>
+            </div>
         </div>
     </section>
 
