12th git commit for Soundgasm web app
Testimonial section added. Not yet responsive

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         </div>
     </section>
 
+<!----------------new Music today page----------- -->
+
     <section class="releases">
         <h2>New Music Out Today!</h2>
         <p>Listen to latest hits and bangers from top artists around the world</p> 
@@ -59,6 +61,7 @@
           </div>
     </section>
 
+<!-- ----------Top charts web section--------- -->
     <section class="charts">
         <h3>Top Charts</h3>
         <p>Top music of different genres</p>
@@ -99,6 +102,30 @@
         </div>
     </section>
 
+<!-- ----------Testimonials web section--------- -->
+    <section class="testimonials">
+        <h3>Hear what our top users say!</h3>
+        <p>Meet some of our top users and hear what they have to say about Soundgasm.</p>
+
+        <div class="row">
+            <div class="testimonial-col">
+                <img src="images/user1.jpg" alt="user1 pic">
+                <div>
+                    <p>Soundgasm is the best web application for streaming music with little to no data loss. I get access to latest music without stress.</p>
+                    <h3>E-Strings</h3>
+                </div>
+            </div>
+
+            <div class="testimonial-col">
+                <img src="images/user2.jpg" alt="user2 pic">
+                <div>
+                    <p>Soundgasm helps me keep track of latest music trends and hit music from around the world. I get access to latest music without stress.</p>
+                    <h3>GidTalker</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 <!---------Javascript for toogle menu-->
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
@@ -111,6 +138,10 @@
         function hideMenu(){
             navLinks.style.right ="-160px";
         }
+    </script>
+
+<!----------javascript for sliding carousel in new releases page ------>
+    <script>
 
         $('.main-carousel').flickity({
             // options
