--- a/index.html
+++ b/index.html
@@ -147,6 +147,11 @@
         </div>
     </section>
 
+<!--------------footer------------------->
+    <footer>
+
+    </footer>
+
 
 <!---------Javascript for toogle menu-->
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
