--- a/index.html
+++ b/index.html
@@ -149,7 +149,21 @@
 
 <!--------------footer------------------->
     <footer>
+        <div class="waves">
+            <div class="wave" id="wave1"></div>
+            <div class="wave" id="wave2"></div>
+            <div class="wave" id="wave3"></div>
+            <div class="wave" id="wave4"></div>
 
+        </div>
+        <h4>About Us</h4>
+        <p>Soundgasm is a web application that makes it easy for you to stream your <br>favorite music from any where in the world.</p>
+        <ul class="social-icons">
+            <li><a href=""><img src="images/facebook.png" alt="facebook logo"></a></li>
+            <li><a href=""><img src="images/twitter.png" alt="twitter logo"></a></li>
+            <li><a href=""><img src="images/telegram.png" alt="telegram logo"></a></li>
+        </ul>
+        <p class="GN">Website developed by Gideon Nwokpor</p>
     </footer>
 
 
